--- a/index.html
+++ b/index.html
@@ -96,7 +96,109 @@
     </section>
 
     <section class="about" id="about">
-        
+        <div class="content">
+            <div class="title-wrapper-about">
+                <p>know about us</p>
+                <h3>abot</h3>
+            </div>
+            <div class="about-content">
+                <div class="left">
+                    <img src="images/about.png" alt="about">
+                </div>
+                <div class="right">
+                    <h3>join technology and mobility</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga iure, nulla expedita corrupti maxime eaque autem. Quaerat et, dolore ipsam ex nulla dolorum quos rerum commodi. Deserunt aperiam sunt dicta. Magnam laboriosam velit ab magni delectus laudantium voluptatum itaque nesciunt dolore perferendis sint facilis recusandae in quos quibusdam, dolorum minus harum non vel fuga quae voluptate illum! Cumque similique tempora quaerat, animi error tempore aliquid, sit possimus, doloremque officiis quos. Reprehenderit, hic repellat. Dicta non quae facilis, ipsam asperiores nulla ea nesciunt. Reiciendis et, temporibus, beatae inventore quidem quaerat quae delectus distinctio ab perferendis quas facilis laborum atque fuga possimus!</p>
+                </div>
+            </div>
+        </div>
+            
     </section>
+
+    <section class="features" id="features">
+        <div class="content">
+            <div class="title-wrapper-features">
+                <p>what you can do</p>
+                <h3>features</h3>
+            </div>
+            <div class="feature-card-block">
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+
+                <div class="feature-card-item">
+                    <img src="images/feature-planet.png" alt="feature">
+                    <div class="feature-text-content">
+                        <h3>title</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="main">
+           <div class="content footer-links">
+               <div class="footer-company">
+                   <h4>company</h4>
+                   <h6>about</h6>
+                   <h6>contact</h6>
+               </div>
+               <div class="footer-rental">
+                   <h4>rental</h4>
+                   <h6>self-drive</h6>
+                   <h6>chauffer-driven</h6>
+                   <h6>help</h6>
+               </div>
+               <div class="footer-social">
+                   <h4>Stay connected</h4>
+                   <div class="social-icons">
+                       <img src="images/instagram.png" alt="instagram">
+                       <img src="images/facebook.png" alt="facebook">
+                   </div>
+               </div>
+               <div class="footer-contact">
+                   <h4>contact</h4>
+                   <h6>0000000000</h6>
+                   <h6>contato@devjunior.com.br</h6>
+                   <h6>Rua;**************</h6>
+               </div>
+           </div>
+        </div>
+        <div class="last">
+            devjunior Dênis 2021 
+        </div>
+    </footer>
 </body>
 </html>
